# obmc-yadro-session-manager

./: .gitignore  README.md  meson.build  xyz.openbmc_project.SessionManager.service.in
src/: dbus.hpp  main.cpp  manager.cpp  manager.hpp  session.cpp  session.hpp
